- Fix apache root node vhost path

--- a/WinLAMP.4.0.0-developer/WinLAMP.GeoNode/Apache2/install/geonode.winlamp.conf
+++ b/WinLAMP.4.0.0-developer/WinLAMP.GeoNode/Apache2/install/geonode.winlamp.conf
@@ -1,18 +1,18 @@
 # mod-wsgi enabled virtual host
-WSGIPythonHome C:/GeoNode-2.4/geonode-2.4
+WSGIPythonHome C:/GeoNode-2.4
 
 <VirtualHost *:80>
     ServerName localhost
     ServerAdmin webmaster@example.org
-    DocumentRoot C:/GeoNode-2.4/geonode-2.4/geonode
+    DocumentRoot C:/GeoNode-2.4/geonode
 
     WSGIPassAuthorization On
-    WSGIScriptAlias / C:/GeoNode-2.4/geonode-2.4/geonode/wsgi.py
+    WSGIScriptAlias / C:/GeoNode-2.4/geonode/wsgi.py
                       
-    Alias /static/ C:/GeoNode-2.4/geonode-2.4/geonode/static_root/
-    Alias /uploaded/ C:/GeoNode-2.4/geonode-2.4/geonode/uploaded/
+    Alias /static/ C:/GeoNode-2.4/geonode/static_root/
+    Alias /uploaded/ C:/GeoNode-2.4/geonode/uploaded/
 
-    <Directory "C:/GeoNode-2.4/geonode-2.4/geonode/">
+    <Directory "C:/GeoNode-2.4/geonode/">
          <Files wsgi.py>
              Order deny,allow
              Allow from all
@@ -25,7 +25,7 @@ WSGIPythonHome C:/GeoNode-2.4/geonode-2.4
         IndexOptions FancyIndexing
     </Directory>
 
-    <Directory "C:/GeoNode-2.4/geonode-2.4/geonode/static_root/">
+    <Directory "C:/GeoNode-2.4/geonode/static_root/">
         Order allow,deny
         Options Indexes FollowSymLinks
         Allow from all
@@ -34,7 +34,7 @@ WSGIPythonHome C:/GeoNode-2.4/geonode-2.4
     </Directory>
 
 
-    <Directory "C:/GeoNode-2.4/geonode-2.4/geonode/uploaded/thumbs/">
+    <Directory "C:/GeoNode-2.4/geonode/uploaded/thumbs/">
         Order allow,deny
         Options Indexes FollowSymLinks
         Allow from all
@@ -43,7 +43,7 @@ WSGIPythonHome C:/GeoNode-2.4/geonode-2.4
     </Directory>
 
 
-    <Directory "C:/GeoNode-2.4/geonode-2.4/geonode/uploaded/avatars/">
+    <Directory "C:/GeoNode-2.4/geonode/uploaded/avatars/">
         Order allow,deny
         Options Indexes FollowSymLinks
         Allow from all
