- full local setup of DJango and GeoNode

--- a/WinLAMP.4.0.0-developer/WinLAMP.GeoNode/Apache2/install/geonode.winlamp.conf
+++ b/WinLAMP.4.0.0-developer/WinLAMP.GeoNode/Apache2/install/geonode.winlamp.conf
@@ -1,5 +1,7 @@
 # mod-wsgi enabled virtual host
-WSGIPythonHome C:/GeoNode-2.4
+WSGIPassAuthorization On
+WSGIPythonHome "C:/GeoNode-2.4"
+WSGIPythonPath 'C:/GeoNode-2.4;C:/GeoNode-2.4/geonode/Lib/site-packages'
 
 <VirtualHost *:80>
     ServerName localhost
@@ -7,7 +9,7 @@ WSGIPythonHome C:/GeoNode-2.4
     DocumentRoot C:/GeoNode-2.4/geonode
 
     WSGIPassAuthorization On
-    WSGIScriptAlias / C:/GeoNode-2.4/geonode/wsgi.py
+    WSGIScriptAlias / 'C:/GeoNode-2.4/geonode/wsgi.py'
                       
     Alias /static/ C:/GeoNode-2.4/geonode/static_root/
     Alias /uploaded/ C:/GeoNode-2.4/geonode/uploaded/
