- GeoNode 2.5.6 Installer (NO OAUTH2)

--- a/WinLAMP.4.0.0-developer/WinLAMP.GeoNode/Apache2/install/geonode.winlamp.conf
+++ b/WinLAMP.4.0.0-developer/WinLAMP.GeoNode/Apache2/install/geonode.winlamp.conf
@@ -1,19 +1,19 @@
 # mod-wsgi enabled virtual host
 WSGIPassAuthorization On
-WSGIPythonHome "C:/GeoNode-2.4"
-WSGIPythonPath 'C:/GeoNode-2.4;C:/GeoNode-2.4/geonode/Lib/site-packages'
+WSGIPythonHome "C:/GeoNode-2.5"
+WSGIPythonPath 'C:/GeoNode-2.5;C:/GeoNode-2.5/Lib/site-packages'
 
 <VirtualHost *:80>
     ServerName localhost
     ServerAdmin webmaster@example.org
-    DocumentRoot C:/GeoNode-2.4/geonode
+    DocumentRoot C:/GeoNode-2.5/geonode
 
-    WSGIScriptAlias / 'C:/GeoNode-2.4/geonode/wsgi.py'
+    WSGIScriptAlias / 'C:/GeoNode-2.5/geonode/wsgi.py'
                       
-    Alias /static/ C:/GeoNode-2.4/geonode/static_root/
-    Alias /uploaded/ C:/GeoNode-2.4/geonode/uploaded/
+    Alias /static/ C:/GeoNode-2.5/geonode/static_root/
+    Alias /uploaded/ C:/GeoNode-2.5/geonode/uploaded/
 
-    <Directory "C:/GeoNode-2.4/geonode/">
+    <Directory "C:/GeoNode-2.5/geonode/">
          <Files wsgi.py>
              Order deny,allow
              Allow from all
@@ -26,7 +26,7 @@ WSGIPythonPath 'C:/GeoNode-2.4;C:/GeoNode-2.4/geonode/Lib/site-packages'
         IndexOptions FancyIndexing
     </Directory>
 
-    <Directory "C:/GeoNode-2.4/geonode/static_root/">
+    <Directory "C:/GeoNode-2.5/geonode/static_root/">
         Order allow,deny
         Options Indexes FollowSymLinks
         Allow from all
@@ -35,7 +35,7 @@ WSGIPythonPath 'C:/GeoNode-2.4;C:/GeoNode-2.4/geonode/Lib/site-packages'
     </Directory>
 
 
-    <Directory "C:/GeoNode-2.4/geonode/uploaded/thumbs/">
+    <Directory "C:/GeoNode-2.5/geonode/uploaded/thumbs/">
         Order allow,deny
         Options Indexes FollowSymLinks
         Allow from all
@@ -44,7 +44,7 @@ WSGIPythonPath 'C:/GeoNode-2.4;C:/GeoNode-2.4/geonode/Lib/site-packages'
     </Directory>
 
 
-    <Directory "C:/GeoNode-2.4/geonode/uploaded/avatars/">
+    <Directory "C:/GeoNode-2.5/geonode/uploaded/avatars/">
         Order allow,deny
         Options Indexes FollowSymLinks
         Allow from all
